# ipml_boston_housing

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  DOCUMENTATION_COMPLETION_REPORT.md  Makefile  README.md  data.dvc  debug_dvc_issue.sh  docker-compose.yml  dvc.yaml  env.template  fix_dvc_pull.sh  main.py  mkdocs.yml  pyproject.toml  pytest.ini
.cursor/rules/: main.mdc
.dvc/: config
.github/workflows/: deploy-docs.yml
airflow/dags/: boston_housing_cached.py  boston_housing_experiments.py  boston_housing_simple.py
airflow/plugins/: __init__.py  minio_cache.py
conf/: config.yaml
conf/data/: boston.yaml
conf/experiment/: baseline.yaml  linear_comparison.yaml  tuned.yaml
conf/model/: adaboost.yaml  bagging.yaml  decision_tree.yaml  elastic_net.yaml  extra_trees.yaml  gradient_boosting.yaml  huber.yaml  knn.yaml  (+6 more)
data/: models.dvc  raw.dvc
docker/: Dockerfile.airflow  Dockerfile.app  Dockerfile.minio  Dockerfile.mlflow  entrypoint-nginx.sh  entrypoint.sh
docs/: README.md  about.md  getting-started.md  index.md  mkdocs.yml
dvclive/: metrics.json  params.yaml
reports/: HW2_VERSIONING_REPORT.md  LAB_REPORT.md  PROJECT_SETUP_REPORT.md
scripts/: check_environment.py  download_data.py  experiment_demo.py  fix_airflow_data_permissions.sh  fix_airflow_permissions.py  fix_airflow_permissions.sh  generate_experiment_report.py  run_experiments.py  start_airflow.sh
src/: __init__.py  config.py  dataset.py  features.py  plots.py
tests/: TEST_RESULTS.md  conftest.py  test_complex_solution.py  test_integration.py  test_pipeline.py  test_reproducibility.py
(+80 files in other folders)
