[project]
name = "ipml-boston-housing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter-data-science>=2.3.0",
    "dvc[s3]>=3.64.2",
    "dvc-gdrive>=3.0.1",
    "pre-commit>=4.5.0",
    "ruff>=0.14.6",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "dvclive>=3.49.0",
    "loguru>=0.7.3",
    "scikit-learn>=1.7.2",
    "click>=8.3.1",
    "dvc-s3>=3.2.2",
    "mlflow[auth]>=3.7.0",
    "boto3>=1.41.5",
    "hydra-core>=1.3.2",
    "pydantic-settings>=2.0",
    "requests>=2.31.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "requests>=2.31.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-redirects>=1.2.0",
    "pymdown-extensions>=10.11.0",
]
